--- a/src/pages/Dashboard/Payment/CheckoutForm.css
+++ b/src/pages/Dashboard/Payment/CheckoutForm.css
@@ -6,12 +6,12 @@
   box-sizing: border-box;
 }
 
-body,
+/* body,
 html {
   background-color: #f6f9fc;
   font-size: 18px;
   font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
-}
+} */
 
 form {
   max-width: 800px;
@@ -26,7 +26,7 @@ label {
   display: block;
 }
 
-button {
+/* button {
   white-space: nowrap;
   border: 0;
   outline: 0;
@@ -58,7 +58,7 @@ button:hover {
 
 button[disabled] {
   opacity: 0.6;
-}
+} */
 
 input,
 select {
